--- a/configs/naf_grid-control.conf
+++ b/configs/naf_grid-control.conf
@@ -14,8 +14,6 @@ wall time = 6:00:00
 
 [task]
 arguments = @MY_JOBID@
-executable = /nfs/dust/cms/user/aakhmets/batch-system-merging/scripts/run.sh
-input files =
-	/nfs/dust/cms/user/aakhmets/batch-system-merging/merging.tar.gz
-	/nfs/dust/cms/user/aakhmets/batch-system-merging/arguments.txt
+executable = scripts/run.sh
+input files = merging.tar.gz arguments.txt
 
