configs: updating grid-control configs

--- a/configs/etp_grid-control_local_cc7.conf
+++ b/configs/etp_grid-control_local_cc7.conf
@@ -1,5 +1,5 @@
 [condor]
-jdldata = Requirements=(TARGET.ProvidesCPU==True)&&(TARGET.ProvidesIO==True)&&(TARGET.CLOUDSITE=="topas") +RemoteJob=True accounting_group=cms.higgs universe=docker docker_image=mschnepf/slc7-condocker
+jdldata = Requirements=(TARGET.ProvidesCPU==True)&&(TARGET.ProvidesIO==True)&&(TARGET.ProvidesEKPResources==True) +RemoteJob=True accounting_group=cms.higgs universe=docker docker_image=mschnepf/slc7-condocker
 proxy = VomsAccessToken
 
 [global]
@@ -16,6 +16,3 @@ wall time = 6:00:00
 arguments = @MY_JOBID@
 executable = scripts/run.sh
 input files = merging.tar.gz arguments.txt
-
-[storage]
-scratch space used = 200000
