--- a/configs/etp_grid-control_remote_cc7.conf
+++ b/configs/etp_grid-control_remote_cc7.conf
@@ -1,5 +1,5 @@
 [condor]
-jdldata = Requirements=(TARGET.ProvidesCPU==True)&&(TARGET.ProvidesIO==True)&&(TARGET.CLOUDSITE=="topas") +RemoteJob=True accounting_group=cms.higgs universe=docker docker_image=mschnepf/slc7-condocker
+jdldata = Requirements=(TARGET.ProvidesCPU==True)&&(TARGET.ProvidesIO==True) +RemoteJob=True accounting_group=cms.higgs universe=docker docker_image=mschnepf/slc7-condocker
 proxy = VomsAccessToken
 
 [global]
